objects/MLHK_Main_Content__c/MLHK_Main_Content__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting contains the sequence of the images to be shown in the main content box on the mini website home page and the corresponding OrchestraCMS content Ids</description>
    <label>MLHK Main Content</label>
</CustomObject>