objects/MLHK_Main_Content__c/fields/Icon_Id__c.field-meta.xml
<CustomField>
    <fullName>Icon_Id__c</fullName>
    <label>Icon Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>