objects/MLHK_Main_Content__c/fields/Menu_Name__c.field-meta.xml
<CustomField>
    <fullName>Menu_Name__c</fullName>
    <description>This field is used to store the menu name that is highlighted in the left static menu.</description>
    <label>Menu Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>