objects/MLHK_Main_Content__c/fields/Page_Index__c.field-meta.xml
<CustomField>
    <fullName>Page_Index__c</fullName>
    <description>This field stores the index of the page that is currently highlighted in the right main content block.</description>
    <label>Page Index</label>
    <length>5</length>
    <type>Text</type>
</CustomField>