objects/MLHK_Main_Content__c/fields/Right_Content_Id__c.field-meta.xml
<CustomField>
    <fullName>Right_Content_Id__c</fullName>
    <description>This field stores the OrchestraCMS content ID that is shown in the right content block.</description>
    <label>Right Content Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>