objects/MLHK_Main_Content__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This fieild stores the language of the content.</description>
    <label>Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>